# hetznerbot

./: .gitignore  .taplo.toml  Justfile  LICENSE.md  Makefile  README.md  get.py  hetznerbot.toml  initdb.py  main.py  pyproject.toml  request.txt  requirements.txt
.github/: dependabot.yml
.github/workflows/: lint.yml
data/: cpu_data.csv  cpu_data.sql
hetzner/: __init__.py  config.example.py  db.py  helper.py  hetzner_helper.py  hetznerbot.py  offer.py  sentry.py  subscriber.py
hetznerbot/: commands.py  config.py  db.py  helper.py  hetzner_helper.py  hetznerbot.py  jobs.py  offer.py  sentry.py  subscriber.py
hetznerbot/helper/: __init__.py  disk_type.py  hetzner.py  session.py  text.py
hetznerbot/models/: __init__.py  cpu.py  offer.py  offer_disk.py  offer_subscriber.py  subscriber.py
migrations/: env.py
migrations/versions/: 2020_04_28_2fdb5eeeecf1_uniq_offer_subscriber.py  2022_12_26_2f13652a0b5c_remove_legacy_fields.py  2022_12_30_2189c235fcaf_remove_add_ipv4_special.py  2023_01_01_37ebb30c61ba_add_add_flag_to_distinguish_new_and_.py  2023_01_07_ca64e61eae56_add_move_new_flag_to_subscrpition_.py  2023_04_12_0572b3aadca3_new_table_for_disk_type.py  2023_04_12_8e555602a405_remove_unused_columns.py  2023_04_13_661d993d5c07_add_cpu_table.py  2023_04_13_7760061bb98a_add_subscriber_properties_for_cpu.py  2026_06_13_9b7a4d5f4c2e_add_first_seen_at_to_offer.py
sql/: new_offers_by_day_and_hour.sql
sql/analysis/: new_offers_by_day_and_hour.sql
