[tool.poetry]
name = "hetznerbot"
version = "1.0.0"
description = "A bot for finding the best offers from hetzner"
authors = ["Arne Beer <contact@arne.beer>"]
license = "MIT"
repository = "https://github.com/nukesor/hetznerbot"

[tool.poetry.dependencies]
python = ">=3.11, <4"
alembic = "^1"
dateparser = "^1"
prettytable = "^3.3.0"
psycopg2-binary = "^2"
python-telegram-bot = {extras = ["job-queue"], version = "^20.1"}
requests = "^2"
sentry-sdk = "^1"
SQLAlchemy = "^2"
sqlalchemy-utils = "^0.41"
toml = "^0.10"
typer = "^0.9"

[tool.poetry.dev-dependencies]
ruff = "^0.2"
types-toml = "^0.10.8"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.isort]
line_length = 88
profile = "black"
