[tool.poetry]
name = "hetznerbot"
version = "1.0.0"
description = "A bot for finding the best offers from hetzner"
authors = ["Arne Beer <contact@arne.beer>"]
license = "MIT"
repository = "https://github.com/nukesor/hetznerbot"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.11, <4"
alembic = "^1"
dateparser = "^1"
prettytable = "^3.11.0"
psycopg2-binary = "^2"
python-telegram-bot = {extras = ["job-queue", "webhooks"], version = "^21.5"}
requests = "^2"
sentry-sdk = "^2"
SQLAlchemy = "^2"
sqlalchemy-utils = "^0.41"
toml = "^0.10"
typer = "^0.12"

[tool.poetry.dev-dependencies]
ruff = "^0.6"
types-toml = "^0.10.8"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

# Check the Ruff documentation for more info on how to configure this
# General docs: https://docs.astral.sh/ruff/configuration/
# Explicit docs for individual settings: https://docs.astral.sh/ruff/settings/
[tool.ruff]
line-length = 88
indent-width = 4
target-version = "py311"
exclude = [
    ".venv",
    "__init__.py",
]

[tool.ruff.lint]
select = [
    "E", # Pycodestyle
    "F", # Pyflakes
    "I", # Isort
    "UP", # Language feature updates
    "RUF", # Ruff Rules
]
fixable = [
    "E",
    "F",
    "I",
    "UP", # Language feature updates
    "RUF", # Ruff Rules
]

# 4. Ignore `E402` (import violations) in all `__init__.py` and misc files.
[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["E402"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
docstring-code-format = true
docstring-code-line-length = "dynamic"
