[project]
authors = [{ name = "Arne Beer", email = "contact@arne.beer" }]
dependencies = [
    "SQLAlchemy>=2",
    "alembic>=1",
    "dateparser>=1",
    "prettytable>=3.12.0",
    "psycopg2-binary>=2",
    "python-telegram-bot[job-queue,webhooks]>=21.8",
    "requests>=2",
    "sentry-sdk>=2",
    "sqlalchemy-utils>=0.41",
    "toml>=0.10",
    "typer>=0.15",
]
description = "A bot for finding the best offers from hetzner"
license = "MIT OR Apache-2.0"
name = "hetznerbot"
requires-python = ">=3.13"
version = "1.0.0"

[project.urls]
Repository = "https://github.com/nukesor/hetznerbot"

[tool.pyright]
venv = ".venv"
venvPath = "."

[tool.uv]
dev-dependencies = ["ruff>=0.8", "types-toml>=0.10.8"]

# Check the Ruff documentation for more info on how to configure this
# General docs: https://docs.astral.sh/ruff/configuration/
# Explicit docs for individual settings: https://docs.astral.sh/ruff/settings/
[tool.ruff]
exclude = [".venv", "__init__.py"]
indent-width = 4
line-length = 88
target-version = "py311"

[tool.ruff.lint]
fixable = [
    "E",
    "F",
    "I",
    "RUF", # Ruff Rules
    "UP",  # Language feature updates
]
select = [
    "E",   # Pycodestyle
    "F",   # Pyflakes
    "I",   # Isort
    "RUF", # Ruff Rules
    "UP",  # Language feature updates
]

# 4. Ignore `E402` (import violations) in all `__init__.py` and misc files.
[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["E402"]

[tool.ruff.format]
docstring-code-format = true
docstring-code-line-length = "dynamic"
indent-style = "space"
line-ending = "auto"
quote-style = "double"
skip-magic-trailing-comma = false
